feat: add photo on the page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="./" alt="Halina Pishchalo">
+        <img src="./for_cv_m.jpeg" alt="Halina Pishchalo">
         <h1>Halina Pishchalo</h1>
         <span>Javascript developer</span>
     </header>
@@ -89,6 +89,5 @@
             </section>
         </div>
     </main>
-    <footer></footer>
 </body>
 </html>
